@@ -6,6 +6,7 @@
 	Improvements:
 		- Add Ctrl(Shift)Tab to switch modi's.
 		- Auto size number of columns based on available columns.
+		- Better way to determine font height.
 	Cleanup:
 		- Do not lug argc,argv around everywhere.
 
